# rusty_timer

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  stopwatch.rs  timer.rs
