[package]
name = "rusty_timer"
version = "1.0.1"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
repository = "https://github.com/TriedWorks/rusty_timer"
license-file = "LICENSE"
keywords = ["timer", "timing", "updates", "system"]
publish = true
description = "standalone stopwatch and timer"

[badges]
travis-ci = { repository = "TriedWorks/rusty_timer", branch= "master" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_timer"
path = "src/lib.rs"

[dependencies]